stable version : next: 	removing dependency injection
