# api/docs/swagger.json
@@ -1,15 +1,8 @@
-// Code generated by swaggo/swag. DO NOT EDIT.
-
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "A e-Commerce API in Go using Gin framework",
+        "title": "Project Device Mart API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "Anaz Ibinu Rasheed",
@@ -20,10 +13,10 @@ const docTemplate = `{
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "host": "localhost:3000",
+    "basePath": "/api/v1",
     "paths": {
         "/admin/category/add-category": {
             "post": {
@@ -894,6 +887,32 @@ const docTemplate = `{
                 }
             }
         },
+        "/admin/sales-report": {
+            "get": {
+                "description": "Sales report of last 30 days from the requested time",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "sales-report"
+                ],
+                "summary": "Monthly sales report",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/su-login": {
             "post": {
                 "description": "For sudo admin login.",
@@ -1560,7 +1579,7 @@ const docTemplate = `{
                 }
             }
         },
-        "/my-orders": {
+        "/orders": {
             "get": {
                 "description": "Retrieves the order history of the current user.",
                 "produces": [
@@ -1604,7 +1623,7 @@ const docTemplate = `{
                 }
             }
         },
-        "/my-orders/cancel/{orderID}": {
+        "/orders/cancel/{orderID}": {
             "post": {
                 "description": "Cancel the order. For online payments, the amount will be added to the user's wallet. For cash on delivery orders,will be marked as cancelled.\nIf the user has used a coupon for the order, the discount amount will be recalculated based on the percentage used and deducted from the refunding amount.",
                 "consumes": [
@@ -1648,7 +1667,7 @@ const docTemplate = `{
                 }
             }
         },
-        "/my-orders/invoice/{orderID}": {
+        "/orders/invoice/{orderID}": {
             "get": {
                 "description": "Download the invoice as a PDF file.",
                 "produces": [
@@ -1689,9 +1708,9 @@ const docTemplate = `{
                 }
             }
         },
-        "/my-orders/return/{orderID}": {
+        "/orders/return/{orderID}": {
             "post": {
-                "description": "Return the order if the order is valid for return.Amount will be added to the user's wallet.\nIf the user has used a coupon for the order, the discount amount will be recalculated based on the percentage used and deducted from the refunding amount.",
+                "description": "Return the order if the order is valid for return.Amount will be added to the user's wallet.\nIf the user has used a coupon for the order, the discount amount will be recalculated based\non the percentage used and deducted from the refunding amount.",
                 "consumes": [
                     "application/json"
                 ],
@@ -1733,7 +1752,7 @@ const docTemplate = `{
                 }
             }
         },
-        "/payment/order-cod-confirmed": {
+        "/payment/cod-confirm": {
             "post": {
                 "description": "Confirms the cash on delivery (COD) delivery for the current user.",
                 "produces": [
@@ -1759,7 +1778,7 @@ const docTemplate = `{
                 }
             }
         },
-        "/payment/razorpay": {
+        "/payment/online": {
             "get": {
                 "description": "Make payment using razorpay page .",
                 "produces": [
@@ -1782,7 +1801,7 @@ const docTemplate = `{
                 }
             }
         },
-        "/payment/razorpay/process-order": {
+        "/payment/online/process": {
             "post": {
                 "description": "Verify razorpay payment using razorpay credentials .",
                 "produces": [
@@ -2441,7 +2460,7 @@ const docTemplate = `{
                         "required": true
                     },
                     {
-                        "description": "Address updation details",
+                        "description": "Address update details",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -3051,22 +3070,4 @@ const docTemplate = `{
             }
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0",
-	Host:             "localhost:3000",
-	BasePath:         "/api/v1",
-	Schemes:          []string{},
-	Title:            "Project Device Mart API",
-	Description:      "A e-Commerce API in Go using Gin framework",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-	LeftDelim:        "{{",
-	RightDelim:       "}}",
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
